k8s/apps/monitoring/manifests/ingress-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.k8s.vicio.ovh`)  # UPDATE THIS
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: default
    domains:
      - main: grafana.k8s.k8s.vicio.ovh  # UPDATE THIS
