k8s/apps/monitoring/manifests/ingress-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.k8s.vicio.ovh`)  # UPDATE THIS
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    certResolver: default
    domains:
      - main: prometheus.k8s.k8s.vicio.ovh  # UPDATE THIS
